chore: Make default wrangler trigger config less surprising

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,4 +8,4 @@ minify = true
 # Docs: https://developers.cloudflare.com/workers/platform/triggers/cron-triggers/
 # Configuration: https://developers.cloudflare.com/workers/wrangler/configuration/#triggers
 [triggers]
-crons = ["0 1/4 * * *"] # * * * * * = run every minute
+crons = ["0 * * * *"] # * * * * * = run every minute
